--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>react-ts-items</title>
+    <title>中博题库</title>
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 </html>
