--- a/static/index.html
+++ b/static/index.html
@@ -5,5 +5,7 @@
     <title>中博题库</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
 </head>
-<body></body>
+<body>
+    <div id="root"></div>
+</body>
 </html>
