--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>中博题库</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/png" href="./facicon.png" />
 </head>
 <body>
     <div id="root"></div>
