--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,9 @@
 <html lang="zh_cn">
 <head>
     <meta charset="utf-8" />
-    <title>中博题库</title>
+    <title>冻师傅</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="./facicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
     <div id="root"></div>
